# vscode-git-monolithic-extension

./: .bazelignore  .bazelrc  .bazelversion  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .plzconfig  .shellcheckrc  .vscodeignore  BUILD.bazel  BUILD.plz  Cargo.toml  LICENSE  LICENSE.txt  MODULE.bazel  NOTES.md  README.md  REPO.bazel  ThirdPartyNotices.txt  dprint.json  eslint.config.mjs  multitool.lock.json  package.json  package.json-off.json  package.nls.json  package.nls.json-off.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  reveal-node-modules.sh  runc-notes.md  tsconfig.json
.devcontainer/: BUILD.bazel  Dockerfile  apt.lock.json  devcontainer-check.mjs  devcontainer-lock.json  devcontainer.json  jammy.yaml
.devcontainer/def/: devcontainer.json
.devcontainer/def/feature-bazel/: BUILD.bazel  devcontainer-feature.json  install.sh
.devcontainer/dotslash/: bazel  buildifier  buildozer  gh  node  pnpm  rustup  starpls  unused-deps
.devcontainer/feature-bazel/: install.sh
build_defs/config_settings/: BUILD.bazel
build_defs/rust_wasm_bindgen/: BUILD.bazel  Cargo.toml
build_defs/rust_wasm_bindgen/src/: lib.rs
build_defs/test_toolchains/: BUILD.bazel
build_defs/vsce_package/: BUILD.bazel  package.json  vsce_package.bzl
build_defs/vsce_package/src/: main.ts
extension/: BUILD.bazel  package.json  tsconfig.json
extension/src/: askpass-main.ts  askpass.ts  autofetch.ts  decorationProvider.ts  fileSystemProvider.ts  git.ts  main.ts  model.ts  protocolHandler.ts  remoteProvider.ts  remoteSource.ts  staging.ts  statusbar.ts  terminal.ts  uri.ts
extension/src/api/: api1.ts  extension.ts  git.ts
extension/src/commands/: create.ts  helpers.ts  register.ts
extension/src/commands/implementations/: cherry-pick.ts  close.ts  ignore.ts  init.ts  merge.ts  refresh.ts  rename.ts  restore-commit-template.ts  reveal-in-explorer.ts  set-log-level.ts  undo-commit.ts
extension/src/commands/implementations/branch/: branch-from.ts  branch.ts  delete-branch.ts  mod.ts  rename-branch.ts
extension/src/commands/implementations/checkout/: checkout-detached.ts  checkout.ts  helpers.ts  quick-pick.ts
extension/src/commands/implementations/clean/: clean-all-tracked.ts  clean-all-untracked.ts  clean-all.ts  clean.ts  helpers.ts  mod.ts
extension/src/commands/implementations/clone/: clone-recursive.ts  clone.ts  helpers.ts  mod.ts
extension/src/commands/implementations/commit/: commit-all-amend-no-verify.ts  commit-all-amend.ts  commit-all-no-verify.ts  commit-all-signed-no-verify.ts  commit-all-signed.ts  commit-all.ts  commit-empty-no-verify.ts  commit-empty.ts  commit-no-verify.ts  commit-staged-amend-no-verify.ts  commit-staged-amend.ts  commit-staged-no-verify.ts  commit-staged-signed-no-verify.ts  commit-staged-signed.ts  commit-staged.ts  commit.ts  helpers.ts  mod.ts
extension/src/commands/implementations/fetch/: fetch-all.ts  fetch-prune.ts  fetch.ts
extension/src/commands/implementations/open/: mod.ts  open-repository.ts  open-resource.ts
extension/src/commands/implementations/publish/: publish.ts
extension/src/commands/implementations/pull/: mod.ts  pull-from.ts  pull-rebase.ts  pull.ts
extension/src/commands/implementations/push/: helpers.ts  mod.ts  push-force.ts  push-tags.ts  push-to-force.ts  push-to.ts  push-with-tags-force.ts  push-with-tags.ts  push.ts
extension/src/commands/implementations/rebase/: mod.ts  rebase-abort.ts  rebase.ts
extension/src/commands/implementations/remote/: add-remote.ts  mod.ts  remove-remote.ts
extension/src/commands/implementations/revert/: revert-change.ts  revert-selected-ranges.ts
extension/src/commands/implementations/stage/: helpers.ts  mod.ts  stage-all-merge.ts  stage-all-tracked.ts  stage-all-untracked.ts  stage-all.ts  stage-selected-ranges.ts  stage.ts
extension/src/commands/implementations/stash/: helpers.ts  stash-apply-latest.ts  stash-apply.ts  stash-drop.ts  stash-pop-latest.ts  (+3 more)
extension/src/git/: Commit.ts  IFileStatus.ts  SpawnOptions.ts  Stash.ts  Submodule.ts  commit-regex.ts  error.ts  exec.ts  find.ts  helpers.ts  parseGitCommits.ts  parseGitmodules.ts  parseLsFiles.ts
extension/src/git/git-class/: diff.ts  internal-exec.ts  internal-spawn.ts
extension/src/git/repository-class/: get-head.ts  get-status.ts
extension/src/i18n/translations/: mod.ts
extension/src/ipc/: ipcClient.ts
extension/src/lifecycle/: activate.ts  deactivate.ts
extension/src/logging/: log.ts  pretty-print.test.ts  pretty-print.ts
extension/src/package-patches/: just-debounce.ts  throat.ts  vscode-extension-telemetry.ts
extension/src/repository/: FileEventLogger.ts  GitResourceGroup.ts  OperationResult.ts  Operations.ts  ProgressManager.ts  RepositoryState.ts  Resource.ts  getIconUri.ts  resource-command-resolver.ts  retryRun.ts
extension/src/repository/repository-class/: AbstractRepository.ts  check-if-maybe-rebased.ts  check-ignore.ts  config.ts  createRebaseCommitBox.ts  createStateBox.ts  fetch-internal.ts  find-known-huge-folder-paths-to-ignore.ts  get-config.ts  get-input-template.ts  get-rebase-commit.ts  head-label.ts  ignore.ts  isAbstractRepository.ts  mod.ts  pull-from.ts  pull.ts  push-internal.ts  push.ts  run.ts  stage.ts  sync-internal.ts  sync-label.ts  sync.ts  update-model-state.ts  validate-input.ts
extension/src/typings/: lib.textEncoder.d.ts  refs.d.ts
extension/src/ui/: inlay-hints-provider.ts  source-control.ts
extension/src/util/: config.ts  events.ts  is-cancelled-error.ts  snoop-stream.ts  stream-by-line.test.ts  stream-by-line.ts  timeout.ts  unreachable-error.ts  versions.ts
extension/src/watch/: dot-git-watcher.ts  watch.ts  working-tree-watcher.ts
extension/vsix/: BUILD.bazel  README.md  package.json  package.json-off.json  package.nls.json  package.nls.json-off.json
extension/vsix/src/: askpass.sh
extension/vsix/syntaxes/: git-commit.tmLanguage.json  ignore.tmLanguage.json
extension/wasm/: BUILD.bazel
integration_tests/: BUILD.bazel  package.json  rootfs-factory.sh  run-container.sh
integration_tests/src/: playwright.test.ts
(+244 files in other folders)
