module(name = "vscode_git_monolithic")

# To fully update lockfile: bazel mod deps --lockfile_mode=refresh

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "aspect_rules_lint", version = "2.5.0")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "git", version = "2.53.0.bcr.1")
bazel_dep(name = "llvm", version = "0.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.69.0")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

# Force rules_go version to newer version for bazel 9.0.1+ support
# Addresses `The CcInfo symbol has been removed` errors.
# Dependency pulled in via
#   <root> (vscode_git_monolithic@_)
#   └───aspect_rules_lint@2.3.0
#       └───rules_buf@0.5.2
#           ├───gazelle@0.34.0
#           │   └───rules_go@0.42.0 #
#           └───rules_go@0.42.0 #
# TODO(Silic0nS0ldier): Remove once `rules_buf` updates to a newer `rules_go` version.
# https://github.com/bufbuild/rules_buf/issues/132
bazel_dep(name = "rules_go", version = "0.60.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_repositories = {
        "24.15.0-darwin_arm64": ("node-v24.15.0-darwin-arm64.tar.xz", "node-v24.15.0-darwin-arm64", "af5cfaeafe603aaf7599f287fd9d100bb41f16794f49788fa59dd3f25546930f"),
        "24.15.0-darwin_amd64": ("node-v24.15.0-darwin-x64.tar.xz", "node-v24.15.0-darwin-x64", "5d627245b9f53cb2512cc21b7aa6aad693106affadd91e0c8f42d600fb7ba444"),
        "24.15.0-linux_arm64": ("node-v24.15.0-linux-arm64.tar.xz", "node-v24.15.0-linux-arm64", "f3d5a797b5d210ce8e2cb265544c8e482eaedcb8aa409a8b46da7e8595d0dda0"),
        "24.15.0-linux_ppc64le": ("node-v24.15.0-linux-ppc64le.tar.xz", "node-v24.15.0-linux-ppc64le", "6a6560a27bd2817013c28c3d917bfe9eebf26bbd4b1d88475190f216cc411fbb"),
        "24.15.0-linux_s390x": ("node-v24.15.0-linux-s390x.tar.xz", "node-v24.15.0-linux-s390x", "940d4cbfadf736b34519630a05d144c09f8a5aca291a802f2f559ee1562f6f24"),
        "24.15.0-linux_amd64": ("node-v24.15.0-linux-x64.tar.xz", "node-v24.15.0-linux-x64", "472655581fb851559730c48763e0c9d3bc25975c59d518003fc0849d3e4ba0f6"),
        "24.15.0-windows_amd64": ("node-v24.15.0-win-x64.zip", "node-v24.15.0-win-x64", "cc5149eabd53779ce1e7bdc5401643622d0c7e6800ade18928a767e940bb0e62"),
    },
    node_version = "24.15.0",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    ts_version_from = "@npm//:typescript/resolved.json",
)
use_repo(rules_ts_ext, "npm_typescript")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.94.0"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
crate.annotation(
    crate = "wasm-bindgen-cli",
    gen_all_binaries = True,
)
use_repo(crate, "crates")

rust_wasm_bindgen_ext = use_extension("@rules_rust_wasm_bindgen//:extensions.bzl", "rust_ext")
# NOTE Many of these are unused, their inclusion is necessary to suppress Bazel warnings.
use_repo(
    rust_wasm_bindgen_ext,
    "chrome",
    "chrome_headless_shell",
    "chrome_headless_shell_linux64",
    "chrome_headless_shell_mac_arm64",
    "chrome_headless_shell_mac_x64",
    "chrome_headless_shell_win32",
    "chrome_headless_shell_win64",
    "chrome_linux64",
    "chrome_mac_arm64",
    "chrome_mac_x64",
    "chrome_win32",
    "chrome_win64",
    "chromedriver",
    "chromedriver_linux64",
    "chromedriver_mac_arm64",
    "chromedriver_mac_x64",
    "chromedriver_win32",
    "chromedriver_win64",
    "firefox",
    "firefox_linux_aarch64",
    "firefox_linux_x86_64",
    "firefox_local",
    "firefox_mac",
    "geckodriver",
    "geckodriver_linux64",
    "geckodriver_linux_aarch64",
    "geckodriver_macos",
    "geckodriver_macos_aarch64",
    "geckodriver_win64",
    "rrwbd",
    "rrwbd__serde_json-1.0.145",
    "rrwbd__wasm-bindgen-0.2.105",
    "rrwbd__wasm-bindgen-cli-0.2.105",
    "rrwbd__wasm-bindgen-test-0.3.55",
    "safaridriver",
)

register_toolchains(
    # Required for building with //build_defs/platforms:vscode_ext target platform
    "//build_defs/rust_wasm_bindgen:toolchain_for_vscode_ext",
    "//build_defs/rust_wasm_bindgen:toolchain",
    "@llvm//toolchain:all",
    "//build_defs/test_toolchains:wasm32_test_toolchain",
)
