module(name = "vscode_git_monolithic")

# To fully update lockfile: bazel mod deps --lockfile_mode=refresh

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
# For pnpm v11 support
archive_override(
    module_name = "aspect_rules_js",
    urls = ["https://github.com/aspect-build/rules_js/archive/401406a1984917e4d17a1596b5c0dbced0927ff4.tar.gz"],
    strip_prefix = "rules_js-401406a1984917e4d17a1596b5c0dbced0927ff4",
    integrity = "sha256-/qXNoACOY5FtBoSyq+LmUYVyMBlZ4Z6l4luTFHsBU9M=",
)
bazel_dep(name = "aspect_rules_lint", version = "2.7.2")
bazel_dep(name = "aspect_rules_ts", version = "3.9.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "git", version = "2.54.0")
bazel_dep(name = "llvm", version = "0.8.11")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "rules_nodejs", version = "6.7.5")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.70.0")
bazel_dep(name = "rules_rust", version = "0.71.3")
bazel_dep(name = "rules_shell", version = "0.8.0")

# Force rules_go version to newer version for bazel 9.0.1+ support
# Addresses `The CcInfo symbol has been removed` errors.
# Dependency pulled in via
#   <root> (vscode_git_monolithic@_)
#   └───aspect_rules_lint@2.3.0
#       └───rules_buf@0.5.2
#           ├───gazelle@0.34.0
#           │   └───rules_go@0.42.0 #
#           └───rules_go@0.42.0 #
# TODO(Silic0nS0ldier): Remove once `rules_buf` updates to a newer `rules_go` version.
# https://github.com/bufbuild/rules_buf/issues/132
bazel_dep(name = "rules_go", version = "0.60.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_repositories = {
        "26.5.0-darwin_arm64": ("node-v26.5.0-darwin-arm64.tar.xz", "node-v26.5.0-darwin-arm64", "48231d6204eca6be13e6c5184dfdffa1d64ad88880364cc2cfb198f872cb2b13"),
        "26.5.0-darwin_amd64": ("node-v26.5.0-darwin-x64.tar.xz", "node-v26.5.0-darwin-x64", "8cf6704df7d8bfbfb2e290b23de0e7da9569e6741391035eaa0ddcb50fd8d3d0"),
        "26.5.0-linux_arm64": ("node-v26.5.0-linux-arm64.tar.xz", "node-v26.5.0-linux-arm64", "036df0b49662ebb350eb56f1cac603699b1e9ed1e2603ee129fefda473479030"),
        "26.5.0-linux_ppc64le": ("node-v26.5.0-linux-ppc64le.tar.xz", "node-v26.5.0-linux-ppc64le", "d8042da56b7b8ae15b65239efc642918f904d689e0c96a2943c782bd7c126e1b"),
        "26.5.0-linux_s390x": ("node-v26.5.0-linux-s390x.tar.xz", "node-v26.5.0-linux-s390x", "cb6c7942a0ef6ac6275d39aba2de2cf58c6037e5529d065cf4ec834500746802"),
        "26.5.0-linux_amd64": ("node-v26.5.0-linux-x64.tar.xz", "node-v26.5.0-linux-x64", "9f619528f1db5ddc41dccf54211066fb42228d69a156733c69cb9d6cc92e358c"),
        "26.5.0-windows_amd64": ("node-v26.5.0-win-x64.zip", "node-v26.5.0-win-x64", "d3b2277dbcccfdf24ef6302928f64f484cff1d77a6d3caa3a28f4d20ce9158f6"),
    },
    node_version = "26.5.0",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    ts_version_from = "@npm//:typescript/resolved.json",
)
use_repo(rules_ts_ext, "npm_typescript")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.95.0"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
crate.annotation(
    crate = "wasm-bindgen-cli",
    gen_all_binaries = True,
)
use_repo(crate, "crates")

rust_wasm_bindgen_ext = use_extension("@rules_rust_wasm_bindgen//:extensions.bzl", "rust_ext")
# NOTE Many of these are unused, their inclusion is necessary to suppress Bazel warnings.
use_repo(
    rust_wasm_bindgen_ext,
    "chrome",
    "chrome_headless_shell",
    "chrome_headless_shell_linux64",
    "chrome_headless_shell_mac_arm64",
    "chrome_headless_shell_mac_x64",
    "chrome_headless_shell_win32",
    "chrome_headless_shell_win64",
    "chrome_linux64",
    "chrome_mac_arm64",
    "chrome_mac_x64",
    "chrome_win32",
    "chrome_win64",
    "chromedriver",
    "chromedriver_linux64",
    "chromedriver_mac_arm64",
    "chromedriver_mac_x64",
    "chromedriver_win32",
    "chromedriver_win64",
    "firefox",
    "firefox_linux_aarch64",
    "firefox_linux_x86_64",
    "firefox_local",
    "firefox_mac",
    "geckodriver",
    "geckodriver_linux64",
    "geckodriver_linux_aarch64",
    "geckodriver_macos",
    "geckodriver_macos_aarch64",
    "geckodriver_win64",
    "rrwbd",
    "rrwbd__serde_json-1.0.145",
    "rrwbd__wasm-bindgen-0.2.105",
    "rrwbd__wasm-bindgen-cli-0.2.105",
    "rrwbd__wasm-bindgen-test-0.3.55",
    "safaridriver",
)

register_toolchains(
    # Required for building with //build_defs/platforms:vscode_ext target platform
    "//build_defs/rust_wasm_bindgen:toolchain_for_vscode_ext",
    "//build_defs/rust_wasm_bindgen:toolchain",
    "@llvm//toolchain:all",
    "//build_defs/test_toolchains:wasm32_test_toolchain",
)
