load("@rules_runc//runc:defs.bzl", "runc_binary")
load("@rules_itest//private:itest.bzl", "itest_service")

runc_binary(
    name = "container",
    image = "@openvscode_server",
)

# TODO VSCode server container running with runc
# This is insufficient, a script will be necessary to properly set up the environment
# and run the server.
itest_service(
    name = "vscode_server",
    exe = ":runc",
    args = [],
)
