load("@bazel_skylib//lib:selects.bzl", "selects")

selects.config_setting_group(
    name = "linux_amd64",
    match_all = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

selects.config_setting_group(
    name = "linux_arm64",
    match_all = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)
