load("@rules_rust_wasm_bindgen//:defs.bzl", "rust_wasm_bindgen_toolchain")

# Copy of default toolchain in `@rules_rust_wasm_bindgen` with our dependency versions.
rust_wasm_bindgen_toolchain(
    name = "toolchain_impl",
    browser = select({
        "@rules_rust_wasm_bindgen//settings:test_browser_chrome": "@chrome",
        "@rules_rust_wasm_bindgen//settings:test_browser_firefox": "@firefox",
        "@rules_rust_wasm_bindgen//settings:test_browser_safari": None,
    }),
    browser_type = select({
        "@rules_rust_wasm_bindgen//settings:test_browser_chrome": "chrome",
        "@rules_rust_wasm_bindgen//settings:test_browser_firefox": "firefox",
        "@rules_rust_wasm_bindgen//settings:test_browser_safari": "safari",
    }),
    wasm_bindgen_cli = "@crates//:wasm-bindgen-cli__wasm-bindgen",
    wasm_bindgen_test = "@crates//:wasm-bindgen-test",
    wasm_bindgen_test_runner = "@crates//:wasm-bindgen-cli__wasm-bindgen-test-runner",
    webdriver = select({
        "@rules_rust_wasm_bindgen//settings:test_browser_chrome": "@chromedriver",
        "@rules_rust_wasm_bindgen//settings:test_browser_firefox": "@geckodriver",
        "@rules_rust_wasm_bindgen//settings:test_browser_safari": "@safaridriver",
    }),
    webdriver_args = select({
        "@rules_rust_wasm_bindgen//settings:test_browser_chrome": ["--verbose"],
        "@rules_rust_wasm_bindgen//settings:test_browser_firefox": [],
        "@rules_rust_wasm_bindgen//settings:test_browser_safari": [],
    }),
    webdriver_json = "@rules_rust_wasm_bindgen//:webdriver.json",
)

toolchain(
    name = "toolchain",
    toolchain = "toolchain_impl",
    toolchain_type = "@rules_rust_wasm_bindgen//:toolchain_type",
)

# Separate toolchain for VSCode compilation, since test infra is incompatible with the VSCode platform constraints.
rust_wasm_bindgen_toolchain(
    name = "toolchain_impl_for_vscode_ext",
    wasm_bindgen_cli = "@crates//:wasm-bindgen-cli__wasm-bindgen",
)

toolchain(
    name = "toolchain_for_vscode_ext",
    toolchain = "toolchain_impl_for_vscode_ext",
    toolchain_type = "@rules_rust_wasm_bindgen//:toolchain_type",
        target_compatible_with = [
        "@platforms//cpu:all",
        "@platforms//os:none",
    ],
)
