load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

npm_link_all_packages(name = "node_modules")

js_binary(
    name = "bin",
    data = [":lib", "package.json"],
    entry_point = ":dist/main.js",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "lib",
    srcs = glob(["src/**/*.ts"]) + ["package.json"],
    out_dir = "dist",
    root_dir = "src",
    deps = [
        "//:node_modules/@types/node",
        ":node_modules/@vscode/vsce",
        ":node_modules/cleye",
    ],
    tsconfig = ":tsconfig",
    declaration = True,
    visibility = [":__pkg__"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
    visibility = [":__pkg__"],
)
